# llamafile

./: .gitignore  .gitmodules  Makefile  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: bitnet.md  turbo1bit.md
llamafile/: BUILD.mk  args.cpp  args.h  chatbot.h  chatbot_cli.cpp  config.cpp  config.h  llamafile.c  llamafile.h  main.cpp
scripts/: bonsai-opensearch.sh  bonsai-postgres.sh  bonsai-turso.sh
tools/bitnet/: convert-helper-bitnet.py  setup_env.py
turbo1bit/: BUILD.mk  CMakeLists.txt
turbo1bit/src/: turbo1bit_kv_cache.c  turbo1bit_metal.m  turbo1bit_rotation.c
turbo1bit/tools/turbo1bit/: turbo1bit_infer.cpp
